--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -1,3 +1,9 @@
+body{
+  background-image: url('back.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
 .thumbnail img{
   max-height: 150px;
   width: 300px;
